# agentic-expense-reporting

./: .gitignore  LICENSE  Makefile  NOTICE.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
answers/: responses.md
docs/: design.md  mcp.md  project-template_-agentic-expense-reporting-system.docx  system-flow.mmd
docs/submission/: Agentic-Expense-Reporting-System-Mayur-Hulke.docx
examples/: org.json  policy.json
examples/fixtures/: dinner_unreadable.json  flight_clear.json  gift_clear.json  hotel_clear.json  taxi_clear.json
examples/reports/: blurry_receipt.json  eu_resident.json  gift_highrisk.json  small_trip.json
src/expense_pipeline/: __init__.py  __main__.py  cli.py  cost.py  directory.py  human_review.py  mcp_server.py  models.py  orchestrator.py  payment.py  policy.py  privacy.py  serde.py
src/expense_pipeline/agents/: __init__.py  agent1_extract.py  agent2_policy.py  agent3_decision.py
src/expense_pipeline/extractors/: __init__.py  base.py  claude.py  mcp_client.py  mock.py
tests/: conftest.py  test_end_to_end.py  test_mcp_extractor.py  test_step2_validation.py  test_step3_human_review.py  test_step4_privacy.py  test_step5_dual_dept.py
