[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "expense-pipeline"
version = "1.0.0"
description = "Runnable reference implementation of the agentic expense-reporting system"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
real = ["anthropic>=0.40"]
mcp = ["mcp>=1.10,<2"]
dev = ["pytest==8.3.4", "ruff==0.9.2", "mcp>=1.10,<2"]

[project.scripts]
expense-pipeline = "expense_pipeline.cli:main"
expense-mcp-server = "expense_pipeline.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
